fix: fix vertical centering on iOS

--- a/src/picker/components/Picker/Picker.scss
+++ b/src/picker/components/Picker/Picker.scss
@@ -76,6 +76,7 @@ button.emoji,
   border-radius: 100%;
   height: var(--total-emoji-size);
   width: var(--total-emoji-size);
+  line-height: 1;
   overflow: hidden;
   font-family:
     "Apple Color Emoji",
